# ball-tracker

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
calibration/: __init__.py  config.py  dialog.py  fingertip.py  frames.py  homography.py  layout.py  layout_dialog.py  refine.py  storage.py  types.py
framesync/: __init__.py  config.py  drawing.py  engine.py  playback.py  subframe.py  tracker.py  types.py
game_tracker/: __init__.py  __main__.py  app.py  batch_process.py  camera_setup.json  config.py  display.py  game_data.py  paths.py  process_dialog.py  processor.py  setup_config.py  setup_dialog.py  triangulation.py
pose_detection/: __init__.py  config.py  detector.py  extract.py  normalize.py  types.py
stereo_viewer/: __init__.py  __main__.py  app.py  config.py  display.py  frame_sync.py  stereo_tracking.py
throw_detection/: __init__.py  config.py  dataset.py  features.py  inference.py  model.py  train.py
throw_detection/labeller/: __init__.py  app.py  (+3 more)
throw_visualizer/: index.html  package-lock.json  package.json  vite-games-api.ts  vite.config.ts
training_recorder/: __main__.py  app.py  config.py  paths.py
trajectory_tracking/: __init__.py  config.py  drawing.py  release.py  speed.py  stereo.py  tracker.py
video_viewer/: __init__.py  __main__.py  app.py  ball_detection.py  ball_motion.py  camera.py  config.py  display.py  filter_controls.py  filters.py  gru_batch.py  playback.py  playback_cache.py  pose_estimation.py  pose_overlay.py  recording.py  stereo_ball_detection.py  stereo_playback.py  stereo_timeline.py  viewer.py  yolo_batch.py
(+13 files in other folders)
